# survival-cubed

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  mkdocs.yml
.cargo/: config.toml
.github/workflows/: docs.yml  release.yml
assets/structures/: ruin.scst
docs/: blocks.md  controls.md  crafting.md  creator-mode.md  creatures.md  credits.md  gameplay.md  getting-started.md  index.md  magic.md  multiplayer.md  saves.md  story.md  world.md
docs/entities/: ash-twister.md  dark-knight.md  dark-musketeer.md  demon-king.md  demons.md  dragon.md  farmer.md  gargoyle.md  horse.md  index.md  knight.md  livestock.md  mage.md  minotaur.md  musketeer.md  necromancer.md  orcs.md  pets.md  player.md  skeletons.md  slime.md  snake.md  spider.md  twinscale.md  zombie.md
docs/overrides/: comments.html
memory/: MEMORY.md  docs-build-command.md
scripts/: fetch-fonts.py
src/: assets.rs  auth.rs  block.rs  daylight.rs  discovery.rs  entity.rs  inventory.rs  main.rs  net.rs  protocol.rs  recipe.rs  save.rs  server.rs  structure.rs  upnp.rs  voice.rs  voice_relay.rs  world.rs  worldgen.rs
src/client/: audio.rs  map.rs  mod.rs  net.rs  render.rs  screenshot.rs  shader.wgsl  sprite.rs  voice.rs  webcam.rs
