[package]
name = "survival-cubed"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
# Rendering
wgpu = "29"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.33", features = ["bytemuck", "serde"] }

# GUI
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"

# Noise / world generation
fastnoise-lite = "1.1"

# Image loading (block textures)
image = { version = "0.25", default-features = false, features = ["png"] }

# Networking (QUIC)
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"

# LAN discovery (mDNS / DNS-SD)
mdns-sd = "0.20"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# Utilities
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
parking_lot = "0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
