[package]
name = "survival-cubed"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
# Rendering
wgpu = "29"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.33", features = ["bytemuck", "serde"] }

# GUI
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"

# Noise / world generation
fastnoise-lite = "1.1"

# Image loading (block textures) and screenshot encoding (PNG + web JPEG)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Audio playback (background music). Only the Vorbis decoder is pulled in, since
# the embedded music tracks are .ogg.
rodio = { version = "0.20", default-features = false, features = ["vorbis"] }

# Networking (QUIC)
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"

# LAN discovery (mDNS / DNS-SD)
mdns-sd = "0.20"

# Optional UPnP-IGD port forwarding, so an internet host can open its port on a
# home router without configuring it manually. Off by default; see src/upnp.rs.
easy-upnp = "0.3"

# Voice chat (Media over QUIC). Optional at runtime; the server owner enables it.
# `moq-native` configures quinn endpoints, `moq-lite` carries the broadcasts/tracks,
# and `hang` frames Opus audio. `cpal` captures the microphone (rodio can't capture)
# and `audiopus` encodes/decodes Opus (bundling libopus, so no system dependency).
# Only the quinn QUIC backend is needed; drop the default websocket/tcp/uds
# transports. `provider()` honours the process-wide rustls provider, which
# `main` installs as ring, so the compiled-in aws-lc-rs is never selected.
moq-native = { version = "0.17", default-features = false, features = ["quinn", "aws-lc-rs"] }
moq-net = "0.1"
hang = "0.19"
# Pinned to the same cpal as `rodio` above: two cpal versions would both try to
# link the native `alsa` library, which Cargo forbids (one `links` value per graph).
cpal = "0.15"
# Opus encode/decode. We use the 0.3 line because it pulls `audiopus_sys` 0.2,
# which builds a vendored libopus with CMake — no system libopus / autotools
# needed (only a C compiler + cmake). `audiopus`'s own "default" feature is
# misnamed upstream, so we enable `coder` (encoder + decoder) explicitly, and we
# pin `audiopus_sys` with `static` so libopus links into the binary.
audiopus = { version = "0.3.0-rc.0", default-features = false, features = ["coder"] }
audiopus_sys = { version = "0.2.2", default-features = false, features = ["static"] }
# moq-native's connect() takes a url::Url.
url = "2"
# FuturesUnordered, to multiplex reads across all remote voice tracks on one task.
futures = "0.3"

# Webcam video chat (AV1 over the same MOQ relay). Optional at runtime; a separate
# toggle from voice. `nokhwa` captures the camera, `rav1e` encodes AV1, `rav1d`
# decodes it (Rust port of dav1d), and `yuvutils-rs` converts between the camera's
# RGB and the codecs' I420. Both codecs are built **pure-Rust** (`asm` off): it
# needs no NASM toolchain and avoids rav1d's broken aarch64 assembly build, and at
# our tiny 128x96/10fps resolution the software speed difference is negligible. We
# also drop rav1e's default `binaries`/`signal_support` features (library use only)
# and select rav1d's bit-depths explicitly (it errors if none are enabled).
nokhwa = { version = "0.10", features = ["input-native"] }
rav1e = { version = "0.8", default-features = false, features = ["threading"] }
rav1d = { version = "1", default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
yuvutils-rs = "0.5"
# rav1d exposes only the dav1d C ABI (returning negative errno codes); `libc`
# gives us the `EAGAIN` value to recognise "decoder needs more data".
libc = "0.2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# Utilities
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
# Password hashing for account authentication (Argon2id), plus a CSPRNG for
# generating per-account salts.
argon2 = "0.5"
getrandom = "0.3"
dirs = "6"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
parking_lot = "0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
